feat: doc:auto update! fix: fixed types in doc:auto; fix: update all requests; fix: docker-compose paths to volumes;
